--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);
   </script>
   <link href="croplogo.png" rel="shortcut icon" type="image/x-icon">
-  <link href="https://cdn.prod.website-files.com/646bb626f5c2104941dd5a26/646e2e3d6ca538092d67f09e_favicon%202.png" rel="apple-touch-icon">
+  <link href="croplogo.png" rel="apple-touch-icon">
   </head>
   <body class="body" style=""><div class="page-wrapper"><div class="global-styles w-embed">
 </div>
