--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <div class="navbar_container"><div id="w-node-_5a5c3428-c239-86a4-05d7-c37ecb1cfa8a-cb1cfa88" data-w-id="5a5c3428-c239-86a4-05d7-c37ecb1cfa8a" class="navbar_menu-wrapper" style="transform: translate3d(0px, 0rem, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d; width: 3rem; height: 3rem;">
 <a href="#" aria-current="page" class="w-inline-block w--current">
 <img src="croplogo.png" loading="lazy" alt="" class="navbar_logo"></a><div class="navbar_spacer" style="width: 0rem; height: 1.3rem;">
-</div><a href="#" class="link-block w-inline-block">
+</div><a href="construct.html" class="link-block w-inline-block">
 <div class="menu_text-link" style="width: 0rem; height: 1.3rem;">
 Projects</div>
 </a>
@@ -234,7 +234,7 @@ Projects</div>
 </g>
 </svg>
 </div>
-<p class="specialise_list-text">UPCOMING STARTUPS</p>
+<p class="specialise_list-text"><a href="construct.html" style="text-decoration: none; color: white;">UPCOMING STARTUPS</a></p>
 </div>
 <div data-w-id="a715edfa-397b-655a-fca0-fd1307fe1635" class="specialise_list-item" style="transform: translate3d(0rem, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d; color: rgb(255, 255, 255);">
 <div class="specialise_arrow w-embed">
@@ -246,7 +246,7 @@ Projects</div>
 <path d="M15.4 27L14 25.6L23.6 16H15V14H27V26H25V17.4L15.4 27Z" fill="currentColor">
 </path>
 </g>
-</svg></div><p class="specialise_list-text">YOUTUBE CHANNEL</p>
+</svg></div><p class="specialise_list-text"><a href="construct.html" style="text-decoration: none; color: white;">CERTIFICATIONS</a></p>
 </div>
 <div data-w-id="4fb98e3c-218b-4811-67fa-973cc0f94431" class="specialise_list-item" style="transform: translate3d(0rem, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d; color: rgb(255, 255, 255);"><div class="specialise_arrow w-embed">
 <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -258,7 +258,7 @@ Projects</div>
 </g>
 </svg>
 </div>
-<p class="specialise_list-text">COLLEGE GROUPS</p>
+<p class="specialise_list-text"><a href="https://www.linkedin.com/in/shivam-kumar-574600144/" style="text-decoration: none; color: white;">LinkedIn</a></p>
 </div>
 <div data-w-id="328efde5-06c0-19ab-35a8-ced2f2f3b228" class="specialise_list-item" style="transform: translate3d(0rem, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d; color: rgb(255, 255, 255);">
 <div class="specialise_arrow w-embed"><svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -271,7 +271,7 @@ Projects</div>
 </g>
 </svg>
 </div>
-<p class="specialise_list-text">IDEAS</p>
+<p class="specialise_list-text"><a href="construct.html" style="text-decoration: none; color: white;">IDEAS</a></p>
 </div>
 </div>
 </div>
