--- a/index.html
+++ b/index.html
@@ -395,6 +395,12 @@ Projects</div>
             </div>
         </div>
         <div style="margin: 10px 0;">
+          React.js
+            <div style="background-color: #555; border-radius: 5px; width: 100%; height: 15px; margin-top: 5px;">
+                <div style="background-color: #00d8ff; width: 85%; height: 100%; border-radius: 5px;"></div>
+            </div>
+        </div>
+        <div style="margin: 10px 0;">
           Android Studio
             <div style="background-color: #555; border-radius: 5px; width: 100%; height: 15px; margin-top: 5px;">
                 <div style="background-color: #00d8ff; width: 75%; height: 100%; border-radius: 5px;"></div>
@@ -491,6 +497,12 @@ Projects</div>
                   <div style="background-color: #00d8ff; width: 72%; height: 100%; border-radius: 5px;"></div>
               </div>
           </div>
+          <div style="margin: 10px 0;">
+            AI Tuning
+              <div style="background-color: #555; border-radius: 5px; width: 100%; height: 15px; margin-top: 5px;">
+                  <div style="background-color: #00d8ff; width: 52%; height: 100%; border-radius: 5px;"></div>
+              </div>
+          </div>
       </div>
         <span style="color: rgb(48, 47, 47); font-size: x-large;"> __________________________________________________________________  </span>
     </div>
@@ -574,7 +586,33 @@ Projects</div>
 <g mask="url(#mask0_359_2361)">
 <path d="M15.4 27L14 25.6L23.6 16H15V14H27V26H25V17.4L15.4 27Z" fill="currentColor"></path>
 </g>
-</svg></div></div></div><img src="f5.png" loading="lazy" class="latest_case-image is-home"></a><div class="card-end"></div></div></div></div></div></div></header>
+</svg></div></div></div><img src="f5.png" loading="lazy" class="latest_case-image is-home"></a>
+
+<!-- CARD 6 HERE-->
+
+<a href="https://mfrs.netlify.app/" class="latest_case-wrapper w-inline-block dark" style="transform: scale(1.01); transform-style: preserve-3d; filter: brightness(45.4559%) grayscale(77.9201%);"><div class="latest_case_content-wrapper"><p text-fly-in-left="" text-split="" class="latest_card-heading is-white" style="opacity: 1;"><span class="word" style="display: inline-block;"><span class="char" style="display: inline-block; translate: none; rotate: none; scale: none; opacity: 0; transform: translate(-100%, 0%);">T</span><span class="char" style="display: inline-block; translate: none; rotate: none; scale: none; opacity: 0; transform: translate(-100%, 0%);">e</span><span class="char" style="display: inline-block; translate: none; rotate: none; scale: none; opacity: 0; transform: translate(-100%, 0%);">a</span><span class="char" style="display: inline-block; translate: none; rotate: none; scale: none; opacity: 0; transform: translate(-100%, 0%);">m</span></span> <span class="word" style="display: inline-block;"><span class="char" style="display: inline-block; translate: none; rotate: none; scale: none; opacity: 0; transform: translate(-100%, 0%);">U</span><span class="char" style="display: inline-block; translate: none; rotate: none; scale: none; opacity: 0; transform: translate(-100%, 0%);">p</span></span> </p><div class="latest_case-icon-wrapper"><div class="project-card_link-icon w-embed"><svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <mask id="mask0_359_2361" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="9" y="9" width="24" height="24">
+  <rect x="9" y="9" width="24" height="24" fill="currentColor"></rect>
+  </mask>
+  <g mask="url(#mask0_359_2361)">
+  <path d="M15.4 27L14 25.6L23.6 16H15V14H27V26H25V17.4L15.4 27Z" fill="currentColor"></path>
+  </g>
+  </svg></div></div></div><img src="f6.png" loading="lazy" class="latest_case-image is-home"></a>
+
+  <!-- CARD 7 HERE-->
+
+  <a href="https://enervista.netlify.app/" class="latest_case-wrapper w-inline-block dark" style="transform: scale(1.01); transform-style: preserve-3d; filter: brightness(45.4559%) grayscale(77.9201%);"><div class="latest_case_content-wrapper"><p text-fly-in-left="" text-split="" class="latest_card-heading is-white" style="opacity: 1;"><span class="word" style="display: inline-block;"><span class="char" style="display: inline-block; translate: none; rotate: none; scale: none; opacity: 0; transform: translate(-100%, 0%);">T</span><span class="char" style="display: inline-block; translate: none; rotate: none; scale: none; opacity: 0; transform: translate(-100%, 0%);">e</span><span class="char" style="display: inline-block; translate: none; rotate: none; scale: none; opacity: 0; transform: translate(-100%, 0%);">a</span><span class="char" style="display: inline-block; translate: none; rotate: none; scale: none; opacity: 0; transform: translate(-100%, 0%);">m</span></span> <span class="word" style="display: inline-block;"><span class="char" style="display: inline-block; translate: none; rotate: none; scale: none; opacity: 0; transform: translate(-100%, 0%);">U</span><span class="char" style="display: inline-block; translate: none; rotate: none; scale: none; opacity: 0; transform: translate(-100%, 0%);">p</span></span> </p><div class="latest_case-icon-wrapper"><div class="project-card_link-icon w-embed"><svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <mask id="mask0_359_2361" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="9" y="9" width="24" height="24">
+    <rect x="9" y="9" width="24" height="24" fill="currentColor"></rect>
+    </mask>
+    <g mask="url(#mask0_359_2361)">
+    <path d="M15.4 27L14 25.6L23.6 16H15V14H27V26H25V17.4L15.4 27Z" fill="currentColor"></path>
+    </g>
+    </svg></div></div></div><img src="f7.png" loading="lazy" class="latest_case-image is-home"></a>
+    
+    <!-- CARD END IS HERE -->
+    
+    <div class="card-end"></div></div></div></div></div></div></header>
 <header class="section_specialise"><div id="plok" class="padding-global"><div class="container-large"></div></div></header><header class="section_footer"><div class="padding-global overflow-hidden"><div class="container-large"><div class="footer_padding-section"><a data-w-id="af7a646c-ed38-e2d7-baa8-8da6a8057a17" href="mailto:shivamdav05@gmail.com" class="footer_background-image-wrapper w-inline-block"><img src="https://cdn.prod.website-files.com/646bb626f5c2104941dd5a26/661004790ba41b1c6ba1fd12_hero%20background.webp" loading="lazy" data-w-id="af7a646c-ed38-e2d7-baa8-8da6a8057a18" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, (max-width: 1439px) 93vw, 1280px" alt="" srcset="https://cdn.prod.website-files.com/646bb626f5c2104941dd5a26/661004790ba41b1c6ba1fd12_hero%20background-p-500.webp 500w, https://cdn.prod.website-files.com/646bb626f5c2104941dd5a26/661004790ba41b1c6ba1fd12_hero%20background-p-800.webp 800w, https://cdn.prod.website-files.com/646bb626f5c2104941dd5a26/661004790ba41b1c6ba1fd12_hero%20background-p-1080.webp 1080w, https://cdn.prod.website-files.com/646bb626f5c2104941dd5a26/661004790ba41b1c6ba1fd12_hero%20background.webp 1500w" class="hero_background-image is-footer" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d;">
 
 <h1 data-w-id="af7a646c-ed38-e2d7-baa8-8da6a8057a1a" class="hero_heading is-footer" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d;">GET&nbsp;IN&nbsp;TOUCH</h1></a><div data-w-id="af7a646c-ed38-e2d7-baa8-8da6a8057a1c" class="footer-hero-2_color-filter" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d;"></div><div class="footer-cta-component"><div class="footer-2_subtitle-wrapper-copy"><a href="mailto:shivamdav05@gmail.com?subject=Hi" class="button is-secondary is-v2 w-button">shiv230102037@iiitm.ac.in</a></div></div></div></div></div></header></main></div><script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=646bb626f5c2104941dd5a26" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script><script src="script5.js" type="text/javascript"></script><script src="https://unpkg.com/split-type"></script>
