--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- LAST UPDATED ON 5TH JULY 2025-->
 <!DOCTYPE html>
 <html data-wf-page="660d9b2931fa00f631bce95d" data-wf-site="646bb626f5c2104941dd5a26" lang="En" class="w-mod-js w-mod-ix wf-inter-n1-active wf-inter-n8-active wf-inter-n2-active wf-inter-n3-active wf-inter-n4-active wf-inter-n5-active wf-inter-n6-active wf-inter-n7-active wf-inter-n9-active wf-active">
 <head>
@@ -140,7 +141,7 @@ Projects</div>
 <div data-w-id="36fb146c-0c52-2d35-0ad6-e8137e3aad47" style="transform: translate3d(0px, 0rem, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;" class="hero_color-filter">
 </div>
 <div data-w-id="bd0ef9be-b301-3c2b-910a-fcffc5373cfd" style="opacity: 1; transform: translate3d(0px, 0rem, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d;" class="hero_subtitle-wrapper">
-<h2 class="hero_subtitle">Web Designer / Android Developer</h2><a href="#plok" class="cta-button w-button">Get in touch →</a>
+<h2 class="hero_subtitle">AI - ML | Web-Dev | Events</h2><a href="#plok" class="cta-button w-button">Get in touch →</a>
 </div>
 <div class="lottie-spacer"><a href="#about" class="w-inline-block">
 <div data-w-id="994c2702-c2c5-e6d9-9d57-3d0c1aa49cc3" class="lottie-animation" data-animation-type="lottie" data-src="https://cdn.prod.website-files.com/646bb626f5c2104941dd5a26/66165c69fd8788017e5850c3_Scroll%20icon-7.lottie" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="1.8333333333333333" data-duration="0" style="opacity: 1; transform: translate3d(0px, 0rem, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d;">
@@ -516,6 +517,274 @@ Projects</div>
     </div>
     </div>
     </header>
+
+<!-- ADDING THE EXPERIENCE SECTION DATE : 5TH JUL-->
+<header class="section_experience" style="background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364); padding: 60px 0;">
+  <div class="padding-global">
+    <div class="container-large">
+      <div class="specialise_padding-section">
+
+        <!-- Heading -->
+        <div class="specialise_heading-wrapper" style="text-align: center; margin-bottom: 40px;">
+          <p class="about_heading" style="font-size: 3rem; color: #00d8ff; font-weight: bold;">
+            EXPERIENCE
+          </p>
+          <p style="color: #ccc; font-size: 1.1rem;">My professional journey so far</p>
+        </div>
+
+        <!-- Scrolling Cards -->
+        <div class="scroll-wrapper" style="overflow: hidden; white-space: nowrap;">
+          <div class="scroll-track" style="display: inline-flex; animation: scrollLoop 40s linear infinite;">
+
+            <!-- CARD TEMPLATE (x2 for seamless scroll) -->
+            <!-- Repeat SET -->
+            <!-- ========== BEGIN SET ========== -->
+            <!-- Use loop or duplication if generating dynamically -->
+            <!-- You can replace placeholder logo URLs -->
+            <!-- Only add 'online' indicator for present roles -->
+
+            <!-- CARD 1 -->
+            <!-- Single Experience Card with Logo, Company Name, and Online Indicator -->
+            <div class="experience_card" style="min-width: 300px; margin-right: 30px; background: rgba(255,255,255,0.05); border-radius: 15px; padding: 25px; color: white; backdrop-filter: blur(10px); box-shadow: 0 8px 24px rgba(0,0,0,0.4); position: relative;">
+
+              <!-- Top Row: Logo + Company Name + Online -->
+              <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px;">
+                
+                <!-- Left: Logo + Company Name -->
+                <div style="display: flex; align-items: center; gap: 10px;">
+                  <img src="oct.png" alt="Company Logo" style="width: 30px; height: 30px; border-radius: 6px;">
+                  <span style="font-size: 1rem; color: #fff;">OctaNet</span>
+                </div>
+
+                <!-- Right: Online Indicator -->
+                <div style="display: flex; align-items: center; gap: 6px;">
+                  <span class="blinking-dot" style="background-color: skyblue;"></span>
+                  <span style="font-size: 0.85rem; color: skyblue;">Completed</span>
+                </div>
+              </div>
+
+              <!-- Role Title -->
+              <h3 style="margin: 0 0 5px 0; font-size: 1.5rem; color: #00d8ff;padding-right: 25px;">Web Development Intern</h3>
+
+              <!-- Duration -->
+              <p style="color: #ccc; margin-bottom: 10px;">Oct 2024 – Dec 2024</p>
+
+              <!-- Responsibilities -->
+              <ul style="padding-left: 20px; list-style: circle; margin: 0;">
+                <li>Full-stack apps</li>
+                <li>React + Node.js</li>
+                <li>Client-based UIs</li>
+              </ul>
+            </div>
+
+
+            <!-- CARD 2 -->
+            <div class="experience_card" style="min-width: 300px; margin-right: 30px; background: rgba(255,255,255,0.05); border-radius: 15px; padding: 25px; color: white; backdrop-filter: blur(10px); box-shadow: 0 8px 24px rgba(0,0,0,0.4); position: relative;">
+              <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px;">
+                <div style="display: flex; align-items: center; gap: 10px;">
+                  <img src="um.jpg" alt="Company Logo" style="width: 30px; height: 30px; border-radius: 6px;">
+                  <span style="font-size: 1rem; color: #fff;">Unified Mentor</span>
+                </div>
+                <div style="display: flex; align-items: center; gap: 6px;">
+                  <span class="blinking-dot" style="background-color: skyblue;"></span>
+                  <span style="font-size: 0.85rem; color: skyblue;">Completed</span>
+                </div>
+              </div>
+              <h3 style="margin: 0 0 5px 0; font-size: 1.5rem; color: #00d8ff;padding-right: 25px;">Web Development Intern</h3>
+              <p style="color: #ccc; margin-bottom: 10px;">Nov 2024 – Dec 2024</p>
+              <ul style="padding-left: 20px; list-style: circle; margin: 0;">
+                <li>Full-stack apps</li>
+                <li>React + Node.js</li>
+                <li>Client-based UIs</li>
+              </ul>
+            </div>
+
+            <!-- CARD 3 - Corrected Layout -->
+            <div class="experience_card" style="min-width: 300px; margin-right: 30px; background: rgba(255,255,255,0.05); border-radius: 15px; padding: 25px; color: white; backdrop-filter: blur(10px); box-shadow: 0 8px 24px rgba(0,0,0,0.4); position: relative;">
+              <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px;">
+                <div style="display: flex; align-items: center; gap: 10px;">
+                  <img src="cda.png" alt="Company Logo" style="width: 30px; height: 30px; border-radius: 6px;">
+                  <span style="font-size: 1rem; color: #fff;">CDAC </span>
+                </div>
+                <div style="display: flex; align-items: center; gap: 6px;">
+                  <span class="blinking-dot" style="background-color: skyblue;"></span>
+                  <span style="font-size: 0.85rem; color: skyblue;">Completed</span>
+                </div>
+              </div>
+              <h3 style="margin: 0 0 5px 0; font-size: 1.5rem; color: #00d8ff;padding-right: 20px;">Cybersecurity Intern</h3>
+              <p style="color: #ccc; margin-bottom: 10px;">Oct 2024 – Jan 2025</p>
+              <ul style="padding-left: 20px; list-style: circle; margin: 0;">
+                <li>Full-stack apps</li>
+                <li>React + Node.js</li>
+                <li>Client-based UIs</li>
+              </ul>
+            </div>
+
+            <!-- CARD 4 - Corrected Layout -->
+            <div class="experience_card" style="min-width: 300px; margin-right: 30px; background: rgba(255,255,255,0.05); border-radius: 15px; padding: 25px; color: white; backdrop-filter: blur(10px); box-shadow: 0 8px 24px rgba(0,0,0,0.4); position: relative;">
+              <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px;">
+                <div style="display: flex; align-items: center; gap: 10px;">
+                  <img src="ZEN.png" alt="Company Logo" style="width: 30px; height: 30px; border-radius: 6px;">
+                  <span style="font-size: 1rem; color: #fff;">ZENSAR </span>
+                </div>
+                <div style="display: flex; align-items: center; gap: 6px;">
+                  <span class="blinking-dot"></span>
+                  <span style="font-size: 0.85rem; color: #00ff00;">Ongoing</span>
+                </div>
+              </div>
+              <h3 style="margin: 0 0 5px 0; font-size: 1.5rem; color: #00d8ff;padding-right: 20px;">Artificial Intelligence Intern</h3>
+              <p style="color: #ccc; margin-bottom: 10px;">May 2025 – Present</p>
+              <ul style="padding-left: 20px; list-style: circle; margin: 0;">
+                <li>Full-stack apps</li>
+                <li>React + Node.js</li>
+                <li>Client-based UIs</li>
+              </ul>
+            </div>
+
+
+            <!-- REPEAT THE SET FOR LOOPING -->
+            <!-- Cloned Cards -->
+            <!-- (Exact duplicates for seamless loop) -->
+            <!-- You can generate dynamically via JS too -->
+
+            <!-- CARD 1 -->
+            <!-- Single Experience Card with Logo, Company Name, and Online Indicator -->
+            <div class="experience_card" style="min-width: 300px; margin-right: 30px; background: rgba(255,255,255,0.05); border-radius: 15px; padding: 25px; color: white; backdrop-filter: blur(10px); box-shadow: 0 8px 24px rgba(0,0,0,0.4); position: relative;">
+
+              <!-- Top Row: Logo + Company Name + Online -->
+              <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px;">
+                
+                <!-- Left: Logo + Company Name -->
+                <div style="display: flex; align-items: center; gap: 10px;">
+                  <img src="oct.png" alt="Company Logo" style="width: 30px; height: 30px; border-radius: 6px;">
+                  <span style="font-size: 1rem; color: #fff;">OctaNet</span>
+                </div>
+
+                <!-- Right: Online Indicator -->
+                <div style="display: flex; align-items: center; gap: 6px;">
+                  <span class="blinking-dot" style="background-color: skyblue;"></span>
+                  <span style="font-size: 0.85rem; color: skyblue;">Completed</span>
+                </div>
+              </div>
+
+              <!-- Role Title -->
+              <h3 style="margin: 0 0 5px 0; font-size: 1.5rem; color: #00d8ff;padding-right: 25px;">Web Development Intern</h3>
+
+              <!-- Duration -->
+              <p style="color: #ccc; margin-bottom: 10px;">Oct 2024 – Dec 2024</p>
+
+              <!-- Responsibilities -->
+              <ul style="padding-left: 20px; list-style: circle; margin: 0;">
+                <li>Full-stack apps</li>
+                <li>React + Node.js</li>
+                <li>Client-based UIs</li>
+              </ul>
+            </div>
+
+
+            <!-- CARD 2 -->
+            <div class="experience_card" style="min-width: 300px; margin-right: 30px; background: rgba(255,255,255,0.05); border-radius: 15px; padding: 25px; color: white; backdrop-filter: blur(10px); box-shadow: 0 8px 24px rgba(0,0,0,0.4); position: relative;">
+              <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px;">
+                <div style="display: flex; align-items: center; gap: 10px;">
+                  <img src="um.jpg" alt="Company Logo" style="width: 30px; height: 30px; border-radius: 6px;">
+                  <span style="font-size: 1rem; color: #fff;">Unified Mentor</span>
+                </div>
+                <div style="display: flex; align-items: center; gap: 6px;">
+                  <span class="blinking-dot" style="background-color: skyblue;"></span>
+                  <span style="font-size: 0.85rem; color: skyblue;">Completed</span>
+                </div>
+              </div>
+              <h3 style="margin: 0 0 5px 0; font-size: 1.5rem; color: #00d8ff;padding-right: 25px;">Web Development Intern</h3>
+              <p style="color: #ccc; margin-bottom: 10px;">Nov 2024 – Dec 2024</p>
+              <ul style="padding-left: 20px; list-style: circle; margin: 0;">
+                <li>Full-stack apps</li>
+                <li>React + Node.js</li>
+                <li>Client-based UIs</li>
+              </ul>
+            </div>
+
+            <!-- CARD 3 - Corrected Layout -->
+            <div class="experience_card" style="min-width: 300px; margin-right: 30px; background: rgba(255,255,255,0.05); border-radius: 15px; padding: 25px; color: white; backdrop-filter: blur(10px); box-shadow: 0 8px 24px rgba(0,0,0,0.4); position: relative;">
+              <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px;">
+                <div style="display: flex; align-items: center; gap: 10px;">
+                  <img src="cda.png" alt="Company Logo" style="width: 30px; height: 30px; border-radius: 6px;">
+                  <span style="font-size: 1rem; color: #fff;">CDAC </span>
+                </div>
+                <div style="display: flex; align-items: center; gap: 6px;">
+                  <span class="blinking-dot" style="background-color: skyblue;"></span>
+                  <span style="font-size: 0.85rem; color:skyblue;">Completed</span>
+                </div>
+              </div>
+              <h3 style="margin: 0 0 5px 0; font-size: 1.5rem; color: #00d8ff;padding-right: 20px;">Cybersecurity Intern</h3>
+              <p style="color: #ccc; margin-bottom: 10px;">Oct 2024 – Jan 2025</p>
+              <ul style="padding-left: 20px; list-style: circle; margin: 0;">
+                <li>Full-stack apps</li>
+                <li>React + Node.js</li>
+                <li>Client-based UIs</li>
+              </ul>
+            </div>
+
+            <!-- CARD 4 - Corrected Layout -->
+            <div class="experience_card" style="min-width: 300px; margin-right: 30px; background: rgba(255,255,255,0.05); border-radius: 15px; padding: 25px; color: white; backdrop-filter: blur(10px); box-shadow: 0 8px 24px rgba(0,0,0,0.4); position: relative;">
+              <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px;">
+                <div style="display: flex; align-items: center; gap: 10px;">
+                  <img src="ZEN.png" alt="Company Logo" style="width: 30px; height: 30px; border-radius: 6px;">
+                  <span style="font-size: 1rem; color: #fff;">ZENSAR </span>
+                </div>
+                <div style="display: flex; align-items: center; gap: 6px;">
+                  <span class="blinking-dot"></span>
+                  <span style="font-size: 0.85rem; color: #00ff00;">Ongoing</span>
+                </div>
+              </div>
+              <h3 style="margin: 0 0 5px 0; font-size: 1.5rem; color: #00d8ff;padding-right: 20px;">Artificial Intelligence Intern</h3>
+              <p style="color: #ccc; margin-bottom: 10px;">May 2025 – Present</p>
+              <ul style="padding-left: 20px; list-style: circle; margin: 0;">
+                <li>Full-stack apps</li>
+                <li>React + Node.js</li>
+                <li>Client-based UIs</li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</header>
+
+<!-- CSS for animation and online status -->
+<style>
+  .scroll-wrapper:hover .scroll-track {
+    animation-play-state: paused;
+  }
+
+  @keyframes scrollLoop {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-50%);
+    }
+  }
+
+  .blinking-dot {
+    width: 10px;
+    height: 10px;
+    background-color: #00ff00;
+    border-radius: 50%;
+    display: inline-block;
+    animation: blink 1.2s infinite;
+  }
+
+  @keyframes blink {
+    0%, 100% { opacity: 1; }
+    50% { opacity: 0; }
+  }
+</style>
+
+
+<!-- END OF EXPERIENCE SECTION-->
 <header id="projects" data-w-id="aceeb74b-b023-b566-b671-204a78720848" class="section_latest">
 <div class="padding-global">
 <div class="container-large">
