--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- LAST UPDATED ON 5TH JULY 2025-->
+<!-- LAST UPDATED ON 6TH JULY 2025-->
 <!DOCTYPE html>
 <html data-wf-page="660d9b2931fa00f631bce95d" data-wf-site="646bb626f5c2104941dd5a26" lang="En" class="w-mod-js w-mod-ix wf-inter-n1-active wf-inter-n8-active wf-inter-n2-active wf-inter-n3-active wf-inter-n4-active wf-inter-n5-active wf-inter-n6-active wf-inter-n7-active wf-inter-n9-active wf-active">
 <head>
@@ -141,7 +141,7 @@ Projects</div>
 <div data-w-id="36fb146c-0c52-2d35-0ad6-e8137e3aad47" style="transform: translate3d(0px, 0rem, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;" class="hero_color-filter">
 </div>
 <div data-w-id="bd0ef9be-b301-3c2b-910a-fcffc5373cfd" style="opacity: 1; transform: translate3d(0px, 0rem, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d;" class="hero_subtitle-wrapper">
-<h2 class="hero_subtitle">AI - ML | Web-Dev | Events</h2><a href="#plok" class="cta-button w-button">Get in touch →</a>
+<h2 class="hero_subtitle">AI - ML | Web-Dev </h2><a href="#plok" class="cta-button w-button">Get in touch →</a>
 </div>
 <div class="lottie-spacer"><a href="#about" class="w-inline-block">
 <div data-w-id="994c2702-c2c5-e6d9-9d57-3d0c1aa49cc3" class="lottie-animation" data-animation-type="lottie" data-src="https://cdn.prod.website-files.com/646bb626f5c2104941dd5a26/66165c69fd8788017e5850c3_Scroll%20icon-7.lottie" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="1.8333333333333333" data-duration="0" style="opacity: 1; transform: translate3d(0px, 0rem, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d;">
@@ -235,7 +235,7 @@ Projects</div>
 </g>
 </svg>
 </div>
-<p class="specialise_list-text"><a href="construct.html" style="text-decoration: none; color: white;">UPCOMING STARTUPS</a></p>
+<p class="specialise_list-text"><a href="startuptest.html" style="text-decoration: none; color: white;">UPCOMING STARTUPS</a></p>
 </div>
 <div data-w-id="a715edfa-397b-655a-fca0-fd1307fe1635" class="specialise_list-item" style="transform: translate3d(0rem, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d; color: rgb(255, 255, 255);">
 <div class="specialise_arrow w-embed">
@@ -571,9 +571,9 @@ Projects</div>
 
               <!-- Responsibilities -->
               <ul style="padding-left: 20px; list-style: circle; margin: 0;">
-                <li>Full-stack apps</li>
+                <li>Sharpened my skills of HTML & CSS</li>
                 <li>React + Node.js</li>
-                <li>Client-based UIs</li>
+                <li>Did many projects for Web-Dev.</li>
               </ul>
             </div>
 
@@ -593,9 +593,9 @@ Projects</div>
               <h3 style="margin: 0 0 5px 0; font-size: 1.5rem; color: #00d8ff;padding-right: 25px;">Web Development Intern</h3>
               <p style="color: #ccc; margin-bottom: 10px;">Nov 2024 – Dec 2024</p>
               <ul style="padding-left: 20px; list-style: circle; margin: 0;">
-                <li>Full-stack apps</li>
-                <li>React + Node.js</li>
-                <li>Client-based UIs</li>
+                <li>Managed project timelines, made many projects under this internship.</li>
+                <li>Dived deep under the concepts of Javascripts , HTML & CSS.</li>
+                <li>Worked with react , node , Vue & Databases.</li>
               </ul>
             </div>
 
@@ -614,9 +614,9 @@ Projects</div>
               <h3 style="margin: 0 0 5px 0; font-size: 1.5rem; color: #00d8ff;padding-right: 20px;">Cybersecurity Intern</h3>
               <p style="color: #ccc; margin-bottom: 10px;">Oct 2024 – Jan 2025</p>
               <ul style="padding-left: 20px; list-style: circle; margin: 0;">
-                <li>Full-stack apps</li>
-                <li>React + Node.js</li>
-                <li>Client-based UIs</li>
+                <li>Deeply explored Cyber-Security and Linux systems.</li>
+                <li>Penetration Testing , Computer Networks.</li>
+                <li>Did various projects , solved issues and Implemented various issues on the virtual lab.</li>
               </ul>
             </div>
 
@@ -635,8 +635,10 @@ Projects</div>
               <h3 style="margin: 0 0 5px 0; font-size: 1.5rem; color: #00d8ff;padding-right: 20px;">Artificial Intelligence Intern</h3>
               <p style="color: #ccc; margin-bottom: 10px;">May 2025 – Present</p>
               <ul style="padding-left: 20px; list-style: circle; margin: 0;">
-                <li>Full-stack apps</li>
-                <li>React + Node.js</li>
+                <li>Built an AI conversational agent solving major issues like database connections and output,Ticketing
+and other integration issues reducing the integration cost by 100%[completely opensource]</li>
+                <li>Developing and fine-tuning large language models (LLMs) for domain-specific tasks, making
+guidelines and having a tight control over the replies.</li>
                 <li>Client-based UIs</li>
               </ul>
             </div>
@@ -648,7 +650,6 @@ Projects</div>
             <!-- You can generate dynamically via JS too -->
 
             <!-- CARD 1 -->
-            <!-- Single Experience Card with Logo, Company Name, and Online Indicator -->
             <div class="experience_card" style="min-width: 300px; margin-right: 30px; background: rgba(255,255,255,0.05); border-radius: 15px; padding: 25px; color: white; backdrop-filter: blur(10px); box-shadow: 0 8px 24px rgba(0,0,0,0.4); position: relative;">
 
               <!-- Top Row: Logo + Company Name + Online -->
@@ -675,9 +676,9 @@ Projects</div>
 
               <!-- Responsibilities -->
               <ul style="padding-left: 20px; list-style: circle; margin: 0;">
-                <li>Full-stack apps</li>
+                <li>Sharpened my skills of HTML & CSS</li>
                 <li>React + Node.js</li>
-                <li>Client-based UIs</li>
+                <li>Did many projects for Web-Dev.</li>
               </ul>
             </div>
 
@@ -697,9 +698,9 @@ Projects</div>
               <h3 style="margin: 0 0 5px 0; font-size: 1.5rem; color: #00d8ff;padding-right: 25px;">Web Development Intern</h3>
               <p style="color: #ccc; margin-bottom: 10px;">Nov 2024 – Dec 2024</p>
               <ul style="padding-left: 20px; list-style: circle; margin: 0;">
-                <li>Full-stack apps</li>
-                <li>React + Node.js</li>
-                <li>Client-based UIs</li>
+                <li>Managed project timelines, made many projects under this internship.</li>
+                <li>Dived deep under the concepts of Javascripts , HTML & CSS.</li>
+                <li>Worked with react , node , Vue & Databases.</li>
               </ul>
             </div>
 
@@ -712,15 +713,15 @@ Projects</div>
                 </div>
                 <div style="display: flex; align-items: center; gap: 6px;">
                   <span class="blinking-dot" style="background-color: skyblue;"></span>
-                  <span style="font-size: 0.85rem; color:skyblue;">Completed</span>
+                  <span style="font-size: 0.85rem; color: skyblue;">Completed</span>
                 </div>
               </div>
               <h3 style="margin: 0 0 5px 0; font-size: 1.5rem; color: #00d8ff;padding-right: 20px;">Cybersecurity Intern</h3>
               <p style="color: #ccc; margin-bottom: 10px;">Oct 2024 – Jan 2025</p>
               <ul style="padding-left: 20px; list-style: circle; margin: 0;">
-                <li>Full-stack apps</li>
-                <li>React + Node.js</li>
-                <li>Client-based UIs</li>
+                <li>Deeply explored Cyber-Security and Linux systems.</li>
+                <li>Penetration Testing , Computer Networks.</li>
+                <li>Did various projects , solved issues and Implemented various issues on the virtual lab.</li>
               </ul>
             </div>
 
@@ -739,8 +740,10 @@ Projects</div>
               <h3 style="margin: 0 0 5px 0; font-size: 1.5rem; color: #00d8ff;padding-right: 20px;">Artificial Intelligence Intern</h3>
               <p style="color: #ccc; margin-bottom: 10px;">May 2025 – Present</p>
               <ul style="padding-left: 20px; list-style: circle; margin: 0;">
-                <li>Full-stack apps</li>
-                <li>React + Node.js</li>
+                <li>Built an AI conversational agent solving major issues like database connections and output,Ticketing
+and other integration issues reducing the integration cost by 100%[completely opensource]</li>
+                <li>Developing and fine-tuning large language models (LLMs) for domain-specific tasks, making
+guidelines and having a tight control over the replies.</li>
                 <li>Client-based UIs</li>
               </ul>
             </div>
