--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ Projects</div>
 </g>
 </svg>
 </div>
-<p class="specialise_list-text"><a href="startuptest.html" style="text-decoration: none; color: white;">UPCOMING STARTUPS</a></p>
+<p class="specialise_list-text"><a href="construct.html" style="text-decoration: none; color: white;">UPCOMING STARTUPS</a></p>
 </div>
 <div data-w-id="a715edfa-397b-655a-fca0-fd1307fe1635" class="specialise_list-item" style="transform: translate3d(0rem, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d; color: rgb(255, 255, 255);">
 <div class="specialise_arrow w-embed">
